Reorganize project structure and docs

--- a/docs/启动说明.md
+++ b/docs/启动说明.md
@@ -79,7 +79,7 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
 在 Supabase 控制台：
 - 点击 SQL Editor → New query
-- 复制 `supabase-migration.sql` 全部内容
+- 复制 `supabase/migration.sql` 全部内容
 - 粘贴并点击 Run
 
 ### 5. 创建管理员账号（1分钟）
