--- a/docs/快速开始.md
+++ b/docs/快速开始.md
@@ -52,7 +52,7 @@
 5. **运行数据库迁移**
    - 在 Supabase 控制台，点击左侧 "SQL Editor"
    - 点击 "New query"
-   - 打开项目中的 `supabase-migration.sql` 文件
+   - 打开项目中的 `supabase/migration.sql` 文件
    - 复制全部内容，粘贴到 SQL Editor
    - 点击 "Run"（或按 Cmd/Ctrl + Enter）
    - 看到 "Success. No rows returned" 就成功了！
@@ -84,15 +84,20 @@
 ## 📂 项目结构
 
 ```
-├── admin/              # 管理后台
-│   ├── components/     # 布局和保护路由
-│   └── pages/          # 登录页、仪表盘、编辑器
-├── components/         # 前台展示组件
-├── hooks/              # useAuth 和 useContent
-├── lib/                # Supabase 客户端和查询函数
+├── src/                # 前端源码
+│   ├── admin/          # 管理后台
+│   │   ├── components/ # 布局和保护路由
+│   │   └── pages/      # 登录页、仪表盘、编辑器
+│   ├── components/     # 前台展示组件
+│   ├── hooks/          # useAuth 和 useContent
+│   └── lib/            # Supabase 客户端和查询函数
 ├── .env.local          # 环境变量（需要配置）
-├── supabase-migration.sql  # 数据库结构
-└── SUPABASE_SETUP.md   # 详细配置指南（英文）
+├── supabase/           # 数据库脚本
+│   ├── migration.sql   # 数据库结构
+│   └── seed.sql        # 初始化数据
+└── docs/               # 说明文档
+    ├── SUPABASE_SETUP.md
+    └── ADMIN_SYSTEM_README.md
 ```
 
 ---
@@ -154,7 +159,7 @@ A: 修改 `.env.local` 后需要重启开发服务器（Ctrl+C 然后 `npm run d
 
 - **Supabase 配置指南**：[SUPABASE_SETUP.md](SUPABASE_SETUP.md)
 - **管理系统文档**：[ADMIN_SYSTEM_README.md](ADMIN_SYSTEM_README.md)
-- **数据库结构**：[supabase-migration.sql](supabase-migration.sql)
+- **数据库结构**：[supabase/migration.sql](../supabase/migration.sql)
 
 ---
 
